# it_cost_calc

./: .gitignore  .pre-commit-config.yaml  README.md  crud.py  debug_log.txt  main.py  mech_demo_output.json  pyproject.toml  req.txt  total_costs.csv  utils.py  Лист Microsoft Excel.xlsx
data/catalog/: README.md
data/fixtures/: demo_calculation_control_dataset.json  demo_dataset.json  demo_profiles.json  demo_scenarios.json  demo_technical_load_1000_dataset.json  solution_component_c9_demo_dataset.json
docs/: README.md  screenshots.md  traceability.md
docs/architecture/: analysis_scope_profiles.md  candidate_configurations.md  catalog_boundary.md  catalog_staging_import.md  conceptual_cohesion_completion_summary.md  conceptual_cohesion_manifest.md  conceptual_cohesion_roadmap.md  cost_budget_tie_breaker.md  current_subject_schema.md  data_map.md  decision_methods_workspace_reallocation_plan.md  decision_report.md  dns_live_catalog_gui.md  dns_network_parser_best_effort.md  dns_snapshot_import.md  equipment_metrics_profile_implementation.md  final_optimization_refactor_sync.md  future_solution_component_editor_variant_c.md  global_interface_reorganization_implementation.md  global_interface_reorganization_plan.md  hybrid_decision_assessment_workspace_plan.md  layers.md  legacy_infrastructure_tab.md  module_map.md  modules.md  optimization_refactor_patch_sequence.md  overview.md  qt_app_services_adapter.md  qt_component_editor_screen.md  qt_default_switch.md  qt_design_system.md  qt_energy_screen.md  qt_export_screen.md  qt_main_navigation.md  qt_npv_screen.md  qt_settings_responsive_performance.md  qt_smart_table_and_forms.md  qt_ui_design_contract.md  qt_ui_migration_plan.md  qt_ui_ux_debt.md  (+19 more)
docs/demo/: README.md  demo_data_contract.md  ga_ahp_defense_guide.md  ga_ahp_pareto_calculation_control.md  solution_component_editor_defense_guide.md  technical_load_1000_demo.md
docs/development/: dev_tools.md  logging.md  release_builds.md  setup.md  testing.md
docs/product/: vision.md
docs/research/: README.md  ahp.md  criteria_importance.md  decision_criteria_unification_plan.md  equipment_metrics_and_catalog_parsing_plan.md  genetic_algorithm.md  parsing.md
docs/thesis/: README.md  project_academic_overview.docx
gui/: devctl_gui.py
optcore/: ga.py  mech.py  pipeline_knapsack.py  run_ga_test.py
optcore2/: ahp_config_selector.py
packaging/linux/: AppRun  it-cost-calc.desktop
requirements/: build.txt
scripts/: build_linux_appimage.sh  build_windows_exe.py  check_catalog_decision_report.py  check_catalog_staging.py  check_dns_capture_import.py  check_dns_live_workflow.py  check_dns_snapshot_import.py  doctor.py  load_demo_data.py  run_ahp_demo.py  run_app.py  run_calculation_control_demo.py  run_criteria_importance_demo.py  run_demo_control_scenario.py  run_ga_demo.py  run_qt_app.py  run_solution_component_analytics_demo.py  run_solution_component_c9_demo.py  run_solution_component_demo.py  run_solution_component_editor_mvp_demo.py  run_solution_component_financial_demo.py  run_solution_component_report_export_demo.py  run_solution_component_sandbox_conversion_demo.py  run_solution_component_storage_demo.py  run_technical_load_demo.py  update_equipment_catalog.py
src/: app.py  bootstrap.py
src/application/: crud_compat.py  legacy_crud.py
src/domain/: __init__.py  models.py
src/infrastructure/: logging.py
tabs/: ahp_tab.py  capital_costs.py  electricity_costs.py  export_tab.py  it_infrastructure.py  npv_analysis.py  operational_costs.py
tools/: check_ui_text_density.py
(+389 files in other folders)
